lets see if this works

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -292,7 +292,7 @@ outline: none;
 
 <h2 class="text6">Ich bin Muede</h2>
 
-    <form action="/api/vote/10/" method="post">
+    <form action="/api/votes/m/" method="post">
 
         <input class="Mudes-Emoji" alt="Mudes" width="10" height="10" type="image" type="submit" value="10"
         src="C:\Users\Jaemi\Documents\Mint Projekt\Mude.jpeg" name="Bildbutton" >
@@ -301,7 +301,7 @@ outline: none;
 
 <h2 class="text7">Ich bin gestresst</h2>
 
-    <form action="/api/vote/20/" method="post">
+    <form action="/api/votes/g/" method="post">
 
         <input class="Gestresstes-Emoji" alt="Gestresst" width="10" height="10" type="image" type="submit" value="20"
         src="C:\Users\Jaemi\Documents\Mint Projekt\Gestresstes.jpeg" name="Bildbutton" >
