--- a/templates/vote.html
+++ b/templates/vote.html
@@ -4,245 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=0.5"> 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Dokument</title>
    <style>
-
-    .titel{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 50px;
-}
-
-.text1{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 10px;
-}
-.text2{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 10px;
-
-}
-.text3{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 10px;
-
-}
-.text4{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 10px;
-
-}
-.text5{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 10px;
-
-}
-.text6{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 10px;
-
-}
-.text7{
-    display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
-    border: 5px solid #000000;
-    background-color: #ffffff; /* Hintergrundfarbe der Box */
-    padding: 10px; /* Innenabstand um den Text herum */
-    border-radius: 10px; /* Abgerundete Ecken fuer die Box */
-    margin-right: 820px;
-    margin-left: 730px;
-    margin-top: 10px;
-
-}
-
-
-
-
-
-.Mudes-Emoji{
-
-margin-top: 100px;
-margin-bottom: 100px;
-margin-left: 850px;
-margin-right: 100px;
-justify-content: center;
-
-width: 200px;
-height: 200px;
-font-size: 20px;
-border: none;
-border-radius: 50%;
-background-color: white;
-cursor: pointer;
-outline: none;
-
-}
-
-.Weinendes-Emoji{
-
-margin-top: 100px;
-margin-bottom: 100px;
-margin-left: 835px;
-margin-right: 100px;
-justify-content: center;
-
-width: 200px;
-height: 200px;
-font-size: 20px;
-border: none;
-border-radius: 50%;
-background-color: white;
-cursor: pointer;
-outline: none;
-
-}
-
-.Gestresstes-Emoji{
-        margin-top: 100px;
-        margin-bottom: 100px;
-        margin-left: 835px;
-        margin-right: 100px;
-        justify-content: center;
-    width: 200px;
-    height: 200px;
-    font-size: 20px;
-    border: none;
-    border-radius: 50%;
-    background-color: white;
-    cursor: pointer;
-    outline: none;
-
-    }
-
-
-    .Glucklich-Emoji{
-        margin-top: 100px;
-        margin-bottom: 100px;
-        margin-left: 835px;
-        margin-right: 100px;
-        justify-content: center;
-    width: 200px;
-    height: 200px;
-    font-size: 20px;
-    border: none;
-    border-radius: 50%;
-    background-color: white;
-    cursor: pointer;
-    outline: none;
-
-    }
-
-    .Normales-Emoji{
-
-        margin-top: 100px;
-        margin-bottom: 100px;
-        margin-left: 835px;
-        margin-right: 100px;
-        justify-content: center;
-    width: 200px;
-    height: 200px;
-    font-size: 20px;
-    border: none;
-    border-radius: 50%;
-    background-color: white;
-    cursor: pointer;
-    outline: none;
-       
-    }
-
-    .Trauriges-Emoji{
-
-        margin-top: 100px;
-        margin-bottom: 100px;
-        margin-left: 835px;
-        margin-right: 100px;
-        justify-content: center;
-
-    width: 200px;
-    height: 200px;
-    font-size: 20px;
-    border: none;
-    border-radius: 50%;
-    background-color: white;
-    cursor: pointer;
-    outline: none;
-
-    }
-
-    .Lachendes-Emoji{
-        margin-top: 50px;
-        margin-bottom: 100px;
-        margin-left: 785px;
-        margin-right: 100px;
-        justify-content: center;
-
-      
-    width: 300px;
-    height: 300px;
-    font-size: 20px;
-        border: none;
-        border-radius: 50%;
-        background-color: white;
-        cursor: pointer;
-        outline: none;
-    }
 
    </style> 
 </head>
@@ -294,7 +58,7 @@ outline: none;
 
     <form action="/api/votes/m/" method="post">
 
-        <input class="Mudes-Emoji" alt="Mudes" width="10" height="10" type="image" type="submit" value="10"
+        <input class="Mudes-Emoji" alt="Mudes" width="10" height="10" type="image" type="submit" 
         src="C:\Users\Jaemi\Documents\Mint Projekt\Mude.jpeg" name="Bildbutton" >
 
     </form>
@@ -303,7 +67,7 @@ outline: none;
 
     <form action="/api/votes/g/" method="post">
 
-        <input class="Gestresstes-Emoji" alt="Gestresst" width="10" height="10" type="image" type="submit" value="20"
+        <input class="Gestresstes-Emoji" alt="Gestresst" width="10" height="10" type="image" type="submit" 
         src="C:\Users\Jaemi\Documents\Mint Projekt\Gestresstes.jpeg" name="Bildbutton" >
 
     </form>
@@ -311,5 +75,8 @@ outline: none;
     </div>
 </div>
 </body>
+<footer>
+    <p>Produced by: @Mint 2023 24d Jaemie and Flurina, Loris</p>
+</footer>
 </html>
 
