mostly commentary on mood.py edited vote.html for grammar

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -15,19 +15,19 @@
 <div class="center">
     <div class="container" >
 
-<h2 class="text1">Mir geht's sehr schlecht</h2>
+<h2 class="text1">Mir geht's sehr schlecht.</h2>
     <form action="/api/vote/5/" method="post">
     <input class="Weinendes-Emoji" alt="Weinend" width="10" height="10" type="image" type="submit" value="5"
             src="C:\Users\Jaemi\Documents\Mint Projekt\Weinend.jpeg" name="Bildbutton">
     </form>
         
-<h2 class="text2">Mir geht's schlecht</h2>
+<h2 class="text2">Mir geht's schlecht.</h2>
     <form action="/api/vote/4/" method="post">
     <input class="Trauriges-Emoji" alt="Traurig" width="10" height="10" type="image" type="submit" value="4"
        src="C:\Users\Jaemi\Documents\Mint Projekt\Traurig.jpeg" name="Bildbutton">
     </form>
 
-<h2 class="text3">Mir geht's weder gut nich schlecht</h2>
+<h2 class="text3">Mir geht's weder gut noch schlecht.</h2>
     <form action="/api/vote/3/" method="post">
         
         <input class="Normales-Emoji" alt="Normal" width="10" height="10" type="image"  type="submit" value="3"
@@ -35,7 +35,7 @@
 
     </form> 
 
-<h2 class="text4">Mir geht's gut</h2>
+<h2 class="text4">Mir geht's gut.</h2>
     <form action="/api/vote/2/" method="post">
         
         
@@ -45,7 +45,7 @@
     
     </form>
     
-<h2 class="text5">Mir gehts super gut</h2>
+<h2 class="text5">Mir geht's super gut.</h2>
 
     <form action="/api/vote/1/" method="post">
 
@@ -54,7 +54,7 @@
 
        </form>
 
-<h2 class="text6">Ich bin Muede</h2>
+<h2 class="text6">Ich bin müde.</h2>
 
     <form action="/api/votes/m/" method="post">
 
@@ -63,7 +63,7 @@
 
     </form>
 
-<h2 class="text7">Ich bin gestresst</h2>
+<h2 class="text7">Ich bin gestresst.</h2>
 
     <form action="/api/votes/g/" method="post">
 
