--- a/templates/result.html
+++ b/templates/result.html
@@ -5,6 +5,7 @@
     <div>
         <input type="range" name="" value="{{average}}" min="0" max="4" step="1">
         <p>{{percm}}</p>
+        <img src="{{picture}}" alt="">
     </div>
 </body>
 
