--- a/templates/vote.html
+++ b/templates/vote.html
@@ -1,82 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=0.5"> 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Dokument</title>
-   <style>
-
-   </style> 
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
+    <title>Abstimmen</title>
 </head>
+
 <body>
-    <h1 class="titel">Wie fühlst du dich heute?</h1>
-<div class="center">
-    <div class="container" >
+    <header>
+        <h1>Wie fühlst du dich heute?</h1>
+    </header>
 
-<h2 class="text1">Mir geht's sehr schlecht.</h2>
-    <form action="/api/vote/5/" method="post">
-    <input class="Weinendes-Emoji" alt="Weinend" width="10" height="10" type="image" type="submit" value="5"
-            src="C:\Users\Jaemi\Documents\Mint Projekt\Weinend.jpeg" name="Bildbutton">
-    </form>
-        
-<h2 class="text2">Mir geht's schlecht.</h2>
-    <form action="/api/vote/4/" method="post">
-    <input class="Trauriges-Emoji" alt="Traurig" width="10" height="10" type="image" type="submit" value="4"
-       src="C:\Users\Jaemi\Documents\Mint Projekt\Traurig.jpeg" name="Bildbutton">
-    </form>
-
-<h2 class="text3">Mir geht's weder gut noch schlecht.</h2>
-    <form action="/api/vote/3/" method="post">
-        
-        <input class="Normales-Emoji" alt="Normal" width="10" height="10" type="image"  type="submit" value="3"
-       src="C:\Users\Jaemi\Documents\Mint Projekt\normal.jpeg" name="Bildbutton">
-
-    </form> 
-
-<h2 class="text4">Mir geht's gut.</h2>
-    <form action="/api/vote/2/" method="post">
-        
-        
-        <input class="Glucklich-Emoji" alt="Glucklich" width="10" height="10" type="image" type="submit" value="2"
-         src="C:\Users\Jaemi\Documents\Mint Projekt\gluecklich.jpeg" name="Bildbutton"> 
-
-    
-    </form>
-    
-<h2 class="text5">Mir geht's super gut.</h2>
-
-    <form action="/api/vote/1/" method="post">
-
-        <input class="Lachendes-Emoji" alt="Lachend" width="10" height="10" type="image" type="submit" value="1"
-        src="C:\Users\Jaemi\Documents\Mint Projekt\Lachend.jpeg" name="Bildbutton" >
-
-       </form>
-
-<h2 class="text6">Ich bin müde.</h2>
-
-    <form action="/api/votes/m/" method="post">
-
-        <input class="Mudes-Emoji" alt="Mudes" width="10" height="10" type="image" type="submit" 
-        src="C:\Users\Jaemi\Documents\Mint Projekt\Mude.jpeg" name="Bildbutton" >
-
-    </form>
-
-<h2 class="text7">Ich bin gestresst.</h2>
-
-    <form action="/api/votes/g/" method="post">
-
-        <input class="Gestresstes-Emoji" alt="Gestresst" width="10" height="10" type="image" type="submit" 
-        src="C:\Users\Jaemi\Documents\Mint Projekt\Gestresstes.jpeg" name="Bildbutton" >
-
-    </form>
-
+    <div class="card">
+        <h3>Mir geht's sehr schlecht.</h3>
+        <form action="/api/vote/5/" method="post">
+            <input class="img" alt="Weinend" width="10" height="10" type="image" type="submit" value="5"
+                src="{{url_for('static', filename='images/Weinend.jpeg')}}" name="Bildbutton">
+        </form>
     </div>
-</div>
-</body>
-<footer>
-    <p>Produced by: @Mint 2023 24d Jaemie and Flurina, Loris</p>
-</footer>
-</html>
 
+    <div class="card">
+        <h3>Mir geht's schlecht.</h3>
+        <form action="/api/vote/4/" method="post">
+            <input class="img" alt="Traurig" width="10" height="10" type="image" type="submit" value="4"
+                src="{{url_for('static', filename='images/Traurig.jpeg')}}" name="Bildbutton">
+        </form>
+    </div>
+
+    <div class="card">
+        <h3>Mir geht's weder gut noch schlecht.</h3>
+        <form action="/api/vote/3/" method="post">
+            <input class="img" alt="Normal" width="10" height="10" type="image" type="submit" value="3"
+                src="{{url_for('static', filename='images/normal.jpeg')}}" name="Bildbutton">
+        </form>
+    </div>
+
+    <div class="card">
+        <h3>Mir geht's gut.</h3>
+        <form action="/api/vote/2/" method="post">
+            <input class="img" alt="Glücklich" width="10" height="10" type="image" type="submit" value="2"
+                src="{{url_for('static', filename='images/gluecklich.jpeg')}}" name="Bildbutton">
+        </form>
+    </div>
+
+    <div class="card">
+        <h3>Mir geht's super gut.</h3>
+        <form action="/api/vote/1/" method="post">
+            <input class="img" alt="Lachend" width="10" height="10" type="image" type="submit" value="1"
+                src="{{url_for('static', filename='images/Lachend.jpeg')}}" name="Bildbutton">
+        </form>
+    </div>
+
+    <div class="card">
+        <h3>Ich bin müde.</h3>
+        <form action="/api/votes/m/" method="post">
+            <input class="img" alt="Müde" width="10" height="10" type="image" type="submit"
+                src="{{url_for('static', filename='images/Mude.jpeg')}}" name="Bildbutton">
+        </form>
+    </div>
+
+    <div class="card">
+        <h3>Ich bin gestresst.</h3>
+        <form action="/api/votes/g/" method="post">
+            <input class="img" alt="Gestresst" width="10" height="10" type="image" type="submit"
+                src="{{url_for('static', filename='images/Gestresstes.jpeg')}}" name="Bildbutton">
+        </form>
+    </div>
+</body>
+
+
+</html>
