--- a/static/style.css
+++ b/static/style.css
@@ -13,12 +13,12 @@ body {
     padding-top: 0px;
     border-radius: 0.5rem;
     width: 30%;
+    margin: 0.5rem;
 }
 
 header {
     top: 0;
     left: 0;
-    right: 0;
     width: 100%;
     background-color: #333;
     color: white;
@@ -60,4 +60,9 @@ header {
     margin: 5rem;
     display: inline-block; /* or inline, if applicable */
     text-align: center;
+}
+
+.img {
+    width: 25vh;
+    height: 25vh;
 }
